# testbed-os

./: .buildinfo  .gitignore  CNAME  README.md  genindex.html  index.html  objects.inv  pre-req-setup.sh  pyproject.toml  search.html  searchindex.js  setup.sh  tear-down.sh
.doctrees/: environment.pickle  index.doctree
.doctrees/examples/: index.doctree
.doctrees/getting-started/: index.doctree
.doctrees/guest-types/: index.doctree
.doctrees/installation/: index.doctree
.doctrees/interfaces/: index.doctree
.doctrees/kvm-compose/: analysis-tools.doctree  architecture.doctree  index.doctree  usage.doctree
.doctrees/networking/: access-control.doctree  architecture.doctree  index.doctree
.doctrees/orchestration/: architecture.doctree  index.doctree
.doctrees/resource-monitoring/: architecture.doctree  index.doctree
.doctrees/test-harness/: index.doctree
.doctrees/testbed-config/: host.doctree  index.doctree  mode.doctree
.doctrees/testbedos-server/: api.doctree  architecture.doctree  index.doctree
.github/workflows/: clippy.yml  linting.yml  secretscan.yml
_sources/: index.rst.txt
_sources/installation/: index.rst.txt
_sources/networking/: index.rst.txt
_sources/orchestration/: index.rst.txt
_sources/resource-monitoring/: index.rst.txt
_sources/test-harness/: index.rst.txt
docs/: conf.py  index.rst
examples/: .gitignore  README.md  index.html
getting-started/: index.html
guest-types/: index.html
installation/: index.html
interfaces/: index.html
kvm-compose/: Cargo.toml  README.md  analysis-tools.html  architecture.html  dbg.sh  index.html  usage.html
kvm-compose/kvm-compose/: .gitignore  Cargo.toml
kvm-compose/kvm-compose-cli/: Cargo.toml  install.sh
kvm-compose/kvm-compose-cli/src/: main.rs
kvm-compose/kvm-compose-cli/src/setup_config/: mod.rs  steps.rs
kvm-compose/kvm-compose-schemas/: Cargo.toml
kvm-compose/kvm-compose-schemas/assets/: base.yaml
kvm-compose/kvm-compose-schemas/src/: cli_models.rs  deployment_models.rs  exec.rs  gui_models.rs  handlers.rs  lib.rs  settings.rs
kvm-compose/kvm-compose-schemas/src/kvm_compose_yaml/: mod.rs  network_old.rs  testbed_options.rs  tooling.rs
kvm-compose/kvm-compose-schemas/src/kvm_compose_yaml/machines/: avd.rs  docker.rs  libvirt.rs  libvirt_image_download.rs  mod.rs
kvm-compose/kvm-compose-schemas/src/kvm_compose_yaml/network/: acl.rs  mod.rs  router.rs  switch.rs
kvm-compose/kvm-compose-schemas/tests/: parse_test.rs
kvm-compose/kvm-compose-yaml/: index.html  libvirt.html  schema.html
kvm-compose/kvm-compose/assets/: cloud_init.yaml  id_ed25519_testbed_insecure_key  id_ed25519_testbed_insecure_key.pub  network-config.yaml
kvm-compose/kvm-compose/src/: lib.rs
kvm-compose/kvm-compose/src/analysis_tools/: packet_capture.rs
kvm-compose/kvm-compose/src/components/: guest.rs  logical_load_balancing.rs  mod.rs  network.rs  network_interfaces.rs
kvm-compose/kvm-compose/src/components/helpers/: android.rs  artefact_generation.rs  clones.rs  cloud_init.rs  mod.rs  serialisation.rs  xml.rs
kvm-compose/kvm-compose/src/components/helpers/templates/: libvirt_domain.xml  libvirt_network.xml  network-config.yaml
kvm-compose/kvm-compose/src/exec/: android.rs  mod.rs
kvm-compose/kvm-compose/src/orchestration/: api.rs  mod.rs  orchestrator.rs  ssh.rs  websocket.rs
kvm-compose/kvm-compose/src/ovn/: README.md  mod.rs  ovn.rs  ovn_serde.rs  ovn_state.rs
kvm-compose/kvm-compose/src/ovn/components/: acl.rs  chassis.rs  logical_router.rs  logical_router_port.rs  logical_switch.rs  logical_switch_port.rs  mod.rs  ovs.rs
kvm-compose/kvm-compose/src/ovn/configuration/: dhcp.rs  external_gateway.rs  mod.rs  nat.rs  route.rs
kvm-compose/kvm-compose/src/server_client/: client.rs  http_actions.rs  mod.rs
kvm-compose/kvm-compose/src/server_web_client/: client.rs  deployment.rs  mod.rs
kvm-compose/kvm-compose/src/snapshot/: mod.rs  qemu_img.rs  snapshot_cmd.rs  testbed_snapshot.rs
kvm-compose/kvm-compose/src/state/: load_balancing.rs  mod.rs
kvm-compose/kvm-compose/src/state/delta/: mod.rs
kvm-compose/kvm-compose/src/state/orchestration_tasks/: generate_artefacts.rs  guests.rs  mod.rs  ovn_network.rs  ovs_network.rs  stages.rs
kvm-compose/service-clients/: Cargo.toml  README.md
kvm-compose/service-clients/src/docker/: mod.rs
kvm-compose/testbedos-server/: Cargo.toml  host.json.example  install.sh  mode.json  testbedos-server.service
kvm-compose/testbedos-server/assets/scripts/: action_buttons.js  configuration.js  configuration_setup.js  create_deployment.js  run_command.js
kvm-compose/testbedos-server/assets/templates/: base.html  dashboard.html
kvm-compose/testbedos-server/assets/templates/gui/: base.html  deployment_create.html  deployments.html  documentation.html  footer.html  index.html  nav.html  resource_monitoring_list.html
kvm-compose/testbedos-server/assets/templates/gui/configuration/: configuration.html  setup.html
kvm-compose/testbedos-server/assets/templates/gui/deployments/: grafana.html  main_action_buttons.html  run_command.html
kvm-compose/testbedos-server/src/: lib.rs  logging.rs  server.rs
kvm-compose/testbedos-server/src/cluster/: cluster.rs  handlers.rs  manage.rs  mod.rs  ovn.rs
kvm-compose/testbedos-server/src/config/: db.rs  handlers.rs  mod.rs  provider.rs  setup.rs
kvm-compose/testbedos-server/src/deployments/: db.rs  deployments.rs  handlers.rs  helpers.rs  mod.rs  models.rs  providers.rs
kvm-compose/testbedos-server/src/gui/: gui.rs  handlers.rs  mod.rs  websocket.rs
kvm-compose/testbedos-server/src/orchestration/: handlers.rs  mod.rs  websocket.rs
kvm-compose/testbedos-server/src/resource_monitoring/: collector.rs  guest.rs  handlers.rs  helpers.rs  mod.rs
networking/: access-control.html  architecture.html  index.html
orchestration/: architecture.html  index.html
resource-monitoring/: architecture.html  index.html
test-harness/: README.md  index.html  run_test_harness.sh
testbed-config/: host.html  index.html  mode.html
testbedos-server/: api.html  architecture.html  index.html
(+111 files in other folders)
