[tool.poetry]
name = "testbed-os"
version = "1.0.0"
description = ""
authors = ["drrtdrrt <drrtdrrt@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.5"
click = "8.1.3"
sphinx = "7.0.0"
inquirer = "3.1.3"
typer = "0.7.0"
typer-cli = "^0.0.13"
sphinx-rtd-theme = "2.0.0"

ovs = "3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
