[workspace]
members = [
    "kvm-compose",
    "testbedos-server",
    "kvm-compose-schemas",
    "service-clients",
    "kvm-compose-cli"
]

resolver = "2"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
reqwest = {version = "0.11.2", features = ["blocking", "default-tls", "json", "stream"], default-features = false}
serde = {version = "1.0.162", features = ["derive"]}
serde_json = "1.0.96"
uuid = { version = "1.3.4", features = ["v4"] }
clap = {version = "4.4.3", features = ["derive"]}
anyhow = "1.0.68"
virt = {version = "0.3.1" }
tera = "1.19.0"
serde_yaml = "0.8"
lazy_static = "1.4.0"
thiserror = "1.0.50"
async-trait = "0.1.74"
nix = { version = "0.28.0", features = ["user", "fs"] }
chrono = {  version = "0.4.23", features = ["serde"] }

[profile.dev.package."*"]
# options to reduce debug mode size
# optimise dependencies in debug mode
opt-level = 3
# disable debug symbols on dependencies in debug mode
debug = false

[profile.dev]
# project code with no optimisations and enable debug symbols
debug = true
opt-level = 0
