[package]
name = "service-clients"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7.10", features = ["codec"] }
serde_json = { workspace = true }
futures = "0.3.29"
tracing = { workspace = true }
